<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_has_no_vod">Ваш тарифный план не включает медиа-портал</string>
    <string name="account_is_blocked">Ваш договор заблокирован. Обратитесь в тех.поддежку Trinity.</string>
    <string name="action_bar_search">Поиск</string>
    <string name="action_bar_sort">sort</string>
    <string name="action_bar_sort_alpha">По алфавиту</string>
    <string name="action_bar_sort_date_add">По дате добавления</string>
    <string name="action_bar_sort_size">Sort size</string>
    <string name="action_bar_sort_year">По году выпуска</string>
    <string name="all_tv_program">Вся телепрограмма</string>
    <string name="app_media">Trinity Media</string>
    <string name="app_name">TrinityPlayer</string>
    <string name="app_tv">Trinity TV</string>
    <string name="authorization">Авторизация</string>
    <string name="authorization_error">Ошибка авторизации</string>
    <string name="authorization_process">Авторизация</string>
    <string name="caption_begin">Начало</string>
    <string name="caption_end">Конец</string>
    <string name="close">Закрыть</string>
    <string name="dialog_cancel">Отмена</string>
    <string name="download_mx_player">Открыть Market</string>
    <string name="downloading_update">Загрузка обновления</string>
    <string name="init_decoders">Распаковка кодеков</string>
    <string name="loading">Загрузка</string>
    <string name="loading_channels_error">Ошибка загрузки списка каналов</string>
    <string name="loading_userinfo_error">Ошибка загрузки информации с сервера</string>
    <string name="login_dialog_password">Пароль:</string>
    <string name="login_dialog_submit">Войти</string>
    <string name="login_dialog_username">Имя пользователя:</string>
    <string name="mediaportal">Медиа-портал</string>
    <string name="minutes">мин</string>
    <string name="movie_info_actors">Актеры:</string>
    <string name="movie_info_country">Страна:</string>
    <string name="movie_info_director">Режиссер:</string>
    <string name="movie_info_genre">Жанр:</string>
    <string name="movie_info_runtime">Продолжительность:</string>
    <string name="movie_info_year">Год:</string>
    <string name="mx_player_not_found">MX Player не найден. Загрузить из Google Play?</string>
    <string name="no_fuse">модуль FUSE не установлен</string>
    <string name="no_network_continue">Продолжить</string>
    <string name="no_network_title">Network</string>
    <string name="no_wifi">Отсутствует подключение к сети</string>
    <string name="now_label">Сейчас</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact based on your message history</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_media_portal">Медиа портал</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="retry">Повторить</string>
    <string name="search_menu_title">Search</string>
    <string name="settings">Настройки</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="surface_aspect_16_9">16:9</string>
    <string name="surface_aspect_4_3">4:3</string>
    <string name="surface_best_fit">Оптимально</string>
    <string name="surface_fill">Заполнение</string>
    <string name="surface_fit_horizontal">По горизонтали</string>
    <string name="surface_fit_vertical">По вертикали</string>
    <string name="surface_original">По центру</string>
    <string name="test1">test1</string>
    <string name="test2">test2</string>
    <string name="title_activity_settings">Settings</string>
    <string name="update_message">Доступна новая версия {0}. Загрузить?</string>
    <string name="v7_preference_off">OFF</string>
    <string name="v7_preference_on">ON</string>
</resources>
