<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/scrollView1" android:layout_width="wrap_content" android:layout_height="match_parent">
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:textAppearance="?android:attr/textAppearanceLarge" android:id="@+id/movie_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20dp" android:layout_marginTop="20dp" android:text="Large Text" android:layout_alignRight="@+id/movie_descr" android:layout_alignParentLeft="true" android:layout_alignParentTop="true"/>
        <ImageView android:id="@+id/movie_poster" android:focusable="false" android:focusableInTouchMode="false" android:layout_width="129dp" android:layout_height="185dp" android:layout_marginLeft="25dp" android:layout_marginTop="23dp" android:scaleType="fitCenter" android:layout_below="@+id/movie_title" android:layout_alignParentLeft="true"/>
        <ProgressBar android:id="@+id/movie_poster_spinner" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignLeft="@+id/movie_poster" android:layout_alignTop="@+id/movie_poster" android:layout_alignRight="@+id/movie_poster" android:layout_alignBottom="@+id/movie_poster" style="?android:attr/progressBarStyleLarge"/>
        <ProgressBar android:id="@+id/movie_info_spinner" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_centerHorizontal="true" android:layout_centerVertical="true" style="?android:attr/progressBarStyleLarge"/>
        <GridLayout android:id="@+id/gridLayout1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:layout_toRightOf="@+id/movie_poster" android:layout_above="@+id/movie_descr" android:layout_alignTop="@+id/movie_poster" android:layout_alignRight="@+id/movie_title" android:rowCount="6" android:columnCount="2" android:useDefaultMargins="false" android:alignmentMode="alignMargins">
            <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_gravity="left" android:id="@+id/textView0" android:layout_column="0" android:text="@string/movie_info_runtime" android:layout_row="0"/>
            <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_gravity="left" android:id="@+id/movie_info_runtime" android:layout_column="1" android:text="Medium Text" android:layout_row="0"/>
            <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_gravity="left" android:id="@+id/textView1" android:layout_column="0" android:text="@string/movie_info_year" android:layout_row="1"/>
            <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_gravity="left" android:id="@+id/movie_info_year" android:layout_column="1" android:text="Medium Text" android:layout_row="1"/>
            <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_gravity="left" android:id="@+id/textView2" android:layout_column="0" android:text="@string/movie_info_country" android:layout_row="2"/>
            <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_gravity="left" android:id="@+id/movie_info_country" android:layout_column="1" android:text="Medium Text" android:layout_row="2"/>
            <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_gravity="left" android:id="@+id/textView3" android:layout_column="0" android:text="@string/movie_info_genre" android:layout_row="3"/>
            <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_gravity="left" android:id="@+id/movie_info_genre" android:layout_column="1" android:text="Medium Text" android:layout_row="3"/>
            <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_gravity="left" android:id="@+id/textView7" android:layout_column="0" android:text="@string/movie_info_director" android:layout_row="4"/>
            <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_gravity="left" android:id="@+id/movie_info_director" android:layout_column="1" android:text="Medium Text" android:layout_row="4"/>
            <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_gravity="left" android:id="@+id/textView9" android:layout_column="0" android:text="@string/movie_info_actors" android:layout_row="5"/>
            <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:layout_gravity="left" android:id="@+id/movie_info_actors" android:layout_column="1" android:text="Medium Text" android:layout_row="5"/>
        </GridLayout>
        <TextView android:textAppearance="?android:attr/textAppearanceMedium" android:id="@+id/movie_descr" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30dp" android:layout_marginTop="5dp" android:layout_marginRight="30dp" android:text="TextView" android:layout_below="@+id/movie_poster" android:layout_alignParentLeft="true" android:layout_alignParentRight="true"/>
        <ImageButton android:id="@+id/movie_info_play" android:background="#00000000" android:layout_width="129dp" android:layout_height="185dp" android:src="@drawable/ic_launcher" android:layout_alignLeft="@+id/movie_poster" android:layout_alignTop="@+id/movie_poster" android:layout_alignRight="@+id/movie_poster" android:layout_alignBottom="@+id/movie_poster" android:onClick="onPlay"/>
    </RelativeLayout>
</ScrollView>
